<resources>
    <string name="app_name">listsAndProjects</string>
    <string name="btMenu1">My Lists</string>
    <string name="btMenu2">Shared Lists</string>
    <string name="btMenuProjects">Projects</string>
    <string name="btMennuRoutine">Routine</string>
    <string name="btAddFolder">Add Folder</string>
    <string name="title_activity_routines">RoutinesActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>