<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="183dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btMyList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:insetLeft="5dp"
            android:insetTop="30dp"
            android:insetRight="5dp"
            android:insetBottom="10dp"
            android:text="@string/btMenu1"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btSharedList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:insetLeft="5dp"
            android:insetTop="30dp"
            android:insetRight="5dp"
            android:insetBottom="10dp"
            android:text="@string/btMenu2"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="395dp"
        android:layout_height="287dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/btMenuProjects"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:insetBottom="20dp"
            android:text="@string/btMenuProjects"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btMenuRoutine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:insetBottom="20dp"
            android:text="@string/btMennuRoutine"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btAddFolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btAddFolder"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>